specs/001-typescript-to-zig-native/examples/valid/compound-more.ts
let value = 6;

value *= 5;
value /= 3;
value %= 7;

console.log(value);
