specs/001-typescript-to-zig-native/examples/invalid/ternary-arm-type.ts
let value = true ? 1 : "no";
console.log(value);
